# geek-movie-forge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LangGraph_n8n_Skills_OpenCode_一体化架构设想.md  README.md  SECURITY_REVIEW.md  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  review-report-2026-03-19.md  架构设计_01.md
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/frontend/lib/: api.ts  auth.tsx  elapsed.ts  mock-data.ts  navigation.ts
apps/frontend/scripts/: clean-build-artifacts.cjs  prepare-standalone.cjs  prepare-static-dist.cjs
apps/frontend/src/: app.tsx  error-boundary.tsx  main.tsx
apps/frontend/types/: api.ts  console.ts
apps/remotion_renderer/: package.json  server.js
docs/: code-review-2026-03-21.md
docs/superpowers/plans/: 2026-03-20-sqlite-mysql-persistence.md
docs/superpowers/specs/: 2026-03-20-sqlite-mysql-persistence-design.md
infra/docker/: python.Dockerfile  remotion.Dockerfile  render-worker.Dockerfile  web.Dockerfile
infra/docker/nginx/: frontend.conf
scripts/: dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  repair-gen-mapping.cjs
services/api/: __init__.py
services/api/app/: main.py
services/api/tests/: helpers.py  test_api_logging_middleware_security.py  test_assets.py  test_auth.py  test_call_logs.py  test_database_config.py  (+9 more)
services/orchestrator/: __init__.py
workers/image/: __init__.py
workers/render/: __init__.py
workers/text/: __init__.py
workers/voice/: __init__.py
(+64 files in other folders)
